syntax = "proto3";

package payment_service;

message PaymentCreate {
  int32 order_id = 1;
  float amount = 2;
  string status = 3;
}